# VANICP4Em

./: CMakeLists.txt  LICENSE  README.md  demo.py  requirements.txt  run.sh
data/: recovered.txt  source.txt  target.txt  transformation.txt  transformed.txt
src/: data_io.cpp  data_io.h  def.h  icp.cpp  icp.h  icp_aa.cpp  icp_cuda.cu  icp_cuda.h  io.cpp  io.h  main.cpp  main_demo.cpp  main_registration.cpp  readme  temp.h  utils.cu  vanicp.cu  vanicp.h
